# Money-Map

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: activity_profiles.yaml  activity_subprofiles.yaml  auto_tagging.yaml  axes.yaml  bridges.yaml  cells.yaml  diagrams.yaml  entry_levels.yaml  keywords.yaml  mappings.yaml  money_way_profile_map.yaml  paths.yaml  taxonomy.yaml  variants.yaml  work_formats.yaml
data/variants/: archetypes.yaml  modifiers.yaml  variants.generated.json  variants.manual.yaml
docs/: 00_overview.md  01_taxonomy_sources.md  02_three_part_formula.md  03_matrix_2x2x2.md  04_transition_paths.md  05_bridge_map.md  06_rendering_rules.md  07_ui_viewer.md
scripts/: autotag_activity_profile.py  build_exports.py  generate_variants.py
src/money_map/: __init__.py  __main__.py
src/money_map/app/: cli.py
src/money_map/core/: classify.py  graph.py  graph_model.py  ids.py  load.py  model.py  query.py  taxonomy_graph.py  validate.py
src/money_map/domain/: activity_profile.py  activity_profile_autotag.py  activity_tagging.py
src/money_map/render/: __init__.py  ascii.py  graphviz.py  json_export.py  markdown.py  taxonomy_graph.py
src/money_map/ui/: __init__.py  app.py  components.py  cyto_graph.py  state.py
src/money_map/ui/assets/: style.css
src/money_map/ui/logic/: __init__.py  (+1 more)
tests/: conftest.py  test_activity_profiles.py  test_classify.py  test_queries.py  test_render_ascii.py  test_taxonomy_graph.py  test_ui_command_build.py  test_ui_import.py  test_validate_data.py  test_wrap_label.py
(+13 files in other folders)
